Fixing spacing of primary icon in small bubble.css

--- a/modules/custom/gmap_marker/bubble.css
+++ b/modules/custom/gmap_marker/bubble.css
@@ -36,7 +36,6 @@
 #bubble_icon_primary {
 	/* the primary icon */
 	display: inline;
-	margin-right: 12px;
 }
 
 .bubble_small_title {
